# dl_core

./: .gitignore  Cargo.toml  README.md
src/: init.rs  lib.rs  parameter.rs  runtime.rs  shape.rs  state_io.rs  tensor.rs
src/autograd/: check.rs  graph.rs  mod.rs
src/backend/: cpu.rs  mod.rs
src/data/: mod.rs
src/nn/: activation.rs  layer.rs  linear.rs  loss.rs  mlp.rs  mod.rs  module.rs
src/ops/: add.rs  add_broadcast.rs  log.rs  matmul.rs  mod.rs  mul.rs  relu.rs  sigmoid.rs  softmax.rs  sub.rs  sum.rs
src/optimizer/: mod.rs
src/train/: mod.rs
tests/: grad_check.rs  state_dict.rs  train_classification.rs  train_linear_regression.rs
